recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:1: error: Missing closing brace `}' assumed here
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
^Tree:1: error: expected class or object definition
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
^